# FNNTW

./: .gitignore  2d.py  CHANGELOG.md  Cargo.toml  README.md  all_tests.sh  bench  bench2  scaling.py  tests.sh  tsb.py  typical_survey.py
benches/: build.rs  build_nc.rs  containers.rs  euclidean.rs  medians.rs  par_sort.rs  query.rs  query_k.rs  query_k_axis.rs
examples/: correctness_test.py  correctness_test.rs  correctness_test_k.py  correctness_test_k.rs  correctness_test_periodic.py  correctness_test_periodic.rs  simple.rs
pyfnntw/: Cargo.toml  README.md  pyproject.toml  test.py
pyfnntw/.env/: pyvenv.cfg
pyfnntw/benches/: bench.py  bench_big_build.py
pyfnntw/src/: lib.rs
pyfnntw/tests/: test.py
src/: allocator.rs  asdf  distance.rs  lib.rs  moms.rs  point.rs  query.rs  query_k.rs  query_noidx.rs  utils.rs
src/query_k/: container.rs  container_axis.rs  container_noidx.rs  noidx.rs  parallel.rs  parallel_axis.rs  parallel_with.rs  with.rs
tests/: brute_force.rs  brute_force_k.rs  brute_force_k_noidx.rs  brute_force_periodic.rs  brute_force_periodic_k.rs  brute_force_periodic_k_noidx.rs  brute_force_periodic_k_par.rs  brute_force_periodic_k_par_with.rs  num_threads.rs  permutation.rs  query_k_test.rs
