[package]
name = "fnntw"
version = "0.1.3"
description = "FNNTW: Fastest Nearest Neighbor (in the) West. A fast kdtree/kNN library."
authors = ["Cavey Cool <caveycool@gmail.com>"]
repository = "https://github.com/cavemanloverboy/fnstw"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace]
members = [
    "./",
    "pyfnntw",
]

[features]
default = ["binary-heap-container"]
timing = []
single_ref = []
binary-heap-container = []
vec-container = []

[dependencies]
ordered-float = "3.0.0"
num-format = "0.4.0"

[profile.release]
lto = "fat"
codegen-units = 1

[dev-dependencies]
concat-idents = "1.1.3"
seq-macro = "0.3.1"
dry = "0.1.1"
rand = "0.8.5"
criterion = "0.3.6"
pdqselect = "0.1.1"
adqselect = "0.1.3"
rayon = "1.5.3"
ndarray = "0.15.6"
approx_eq = "0.1.8"
ndarray-npy = "0.8.1"

[[bench]]
name = "build"
harness = false

[[bench]]
name = "build_nc" # nc stands for no criterion
harness = false

[[bench]]
name = "medians"
harness = false

[[bench]]
name = "euclidean"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "query_k"
harness = false


