[package]
name = "pyfnntw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyfnntw"
crate-type = ["cdylib"]

[dependencies]
fnntw = "0.1.3"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
ouroboros = "0.15.2"
numpy = "0.16.2"
rayon = "1.5.3"
slice_as_array = "1.1.0"
ndarray = { version = "0.15.6", features = ["rayon"] }

[profile.release]
lto = "fat"
codegen-units = 1
