[package]
name = "pyfnntw"
version = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyfnntw"
crate-type = ["cdylib"]

[dependencies]
fnntw = { path = "../", features = ["no-position", "sqrt-dist2"] }
pyo3 = { version = "0.16.5", features = ["extension-module"] }
ouroboros = "0.15.2"
numpy = "0.16.2"
rayon = "1.5.3"
ndarray = { version = "0.15.6", features = ["rayon"] }
concat-idents = "1.1.4"

[profile.release]
lto = "fat"
codegen-units = 1
